[package]
name = "keenio_booster"
version = "0.2.0"
authors = ["Wu Young <doomsplayer@gmail.com>"]

[dependencies]
hyper = "0.6.14"
chrono = "0.2.16"
serde_json = "0.6.0"
serde = "0.6.0"
redis = "*"
itertools = "0.4.0"
docopt = "*"
rustc-serialize = "*"
keen = "1.0.1"
regex = "0.1.41"
wrapped_enum = "0.1.3"
lazy_static = "0.1.15"
log = "0.3.2"
env_logger = "0.3.1"
libc = "0.2.0"

[lib]
path = "src/lib.rs"
name = "keenio_booster"
crate-type = ["dylib", "rlib"]

[profile.release]
debug = true

