[package]
name = "keenio-batch"
version = "0.3.0"
authors = ["Wu Young <doomsplayer@gmail.com>"]
build = "build.rs"

[dependencies]
hyper = "^0.9"
chrono = "^0.2"
serde_json = "^0.8.0"
serde = "^0.8.0"
redis = "^0.7"
itertools = "^0.4"
error-chain = "^0.5"
keen = "^1.3.0"
regex = "^0.1"
lazy_static = "^0.2"
log = "^0.3"
env_logger = "^0.3"
libc = "^0.2"
dotenv = "^0.8"

[build-dependencies]
serde_codegen = "0.8"

[dev-dependencies]
rustc-serialize = "*"
docopt = "*"

[lib]
path = "src/lib.rs"
name = "keenio_batch"
crate-type = ["dylib", "rlib"]

